??extension repeated string/bytes???bug

--- a/test/Test.mxml
+++ b/test/Test.mxml
@@ -155,12 +155,11 @@
 			test(t6)
 			const t7:TestAllTypes = new TestAllTypes
 			const s64:Int64 = new Int64(uint(-171754567), -198741265)
+			t7.optionalSint64 = s64
 			t7.optionalInt64 = new Int64(ZigZag.encode64low(s64.low, s64.high),
 										 ZigZag.encode64high(s64.low, s64.high))
+			t7.optionalInt32 = -1
 			test(t7)
-			const t8:TestAllTypes = new TestAllTypes
-			t8.optionalInt32 = -1
-			test(t8)
 			const t9:TestAllTypes = new TestAllTypes
 			t9.optionalSint64 = new Int64(uint(-171754567), -198741265)
 			test(t9)
@@ -172,6 +171,10 @@
 			t11.aaa.s = "1234xxx"
 			t11.i = 1234
 			testAmf(t11)
+
+			const t12:TestAllExtensions = new TestAllExtensions
+			t12[repeatedStringExtension] = ["aaaa", "bbb"]
+			test(t12)
 
 			trace("All tests pass.")
 			fscommand("quit")
